--- a/.github/workflows/astro.yml
+++ b/.github/workflows/astro.yml
@@ -31,7 +31,7 @@ jobs:
           node-version: "21"
       
       - name: Install dependencies
-        run: npm ci
+        run: npm install
         working-directory: ${{ env.BUILD_PATH }}
       
       - name: Build with Astro
